# bolt12

./: .gitignore  .gitmodules  Makefile  README.md  TODO.md  example-generated-tlv_n1.js  example-generated-tlv_n2.js  fundamental_types.js  output_of_generator.js
.github/workflows/: ci.yaml
bolt12/: index.d.ts  index.js  package.json
javascript/: .gitignore  .npmignore  Guide.md  Makefile  README.md  chacha20.js  fundamental_types.js  gencode.js  gencode_bolt1.js  index.js  noise.js  onion_message.js  output_of_generator.js  package-lock.json  package.json  postamble.js  preamble.js  recurrence_class.js  test_bolt12.js  test_noise_spec.js  websocket.js
python/: .gitignore  Makefile  README.md  README.rst  bolt12.py  fundamentals.py  preamble.py  pyproject.toml  requirements.txt  test_bolt12.py
python/examples/: decode_offer.py  encode_offer.py
python/src/bolt12/: __init__.py  bolt12.py  key.py  preamble.py
python/tests/: test_bolt12.py
specs/: Makefile  bolt1.csv  bolt12.csv  bolt4.csv
test-vectors/: offers.json
tools/: check_quotes.py  generate-code.py  generate-js.py  requirements.txt
