[tool.poetry]
name = "bolt12"
version = "0.1.2"
description = "Lightning Network BOLT12 Routines"
authors = ["Rusty Russell <rusty@rustcorp.com.au>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rustyrussell/bolt12/"
repository = "https://github.com/rustyrussell/bolt12/"
keywords = [ "bitcoin", "lightning", "bolt12" ]
include = [ "src/bolt12/generated.py" ]

[tool.poetry.dependencies]
python = "^3.6"
pyln-proto = "^0.10.1"
python-dateutil = "^2.8.2"
bech32 = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
